# -*- mode: org -*-

* 0.0.8    UNRELEASED

+ Add scaffolding for unit tests (#2)

** Bugfixes

+ Fix regex for tag info groups (#43)
+ Handle errors during decoding (#42)
+ Handle empty repository (#39)
+ Display only reachable stash-commits (#37)

* 0.0.7    2025-02-20

+ Rename --commit-message CLI flag (#19)
+ Form tooltips without using misc_info (#33)
+ Handle repositories cloned using --depth 1 (#26)

** Bugfixes

+ Fix tag parsing when there are CRLF characters (#30)

* 0.0.6    2025-02-13

+ Handle ascii control characters in messages (#27)
+ Change default encoding from latin-1 to utf-8 (#21)
+ Improve annotated tags misc info (#23)
+ Add annotated tag description to tooltip (#8)

* 0.0.5    2025-02-01

+ Display commit range
+ Sort nodes by label before creating DAG (#13)
+ Use commit message as label (#11)
+ Add flag to show unreachable commits (#14)